--- a/index.html
+++ b/index.html
@@ -53,6 +53,15 @@
           </div>
         </div>
       </div>
+      <div class="testimonial">
+        <p class="quote">
+          This is an inspiring quote, or a testimonial from a customer. Maybe
+          it's just filling up space or maybe people will actually read it. Who
+          knows? All I know is that is looks nice.
+        </p>
+        <p class="credit">Thor, God of Thunder</p>
+      </div>
+      <div class="action"></div>
     </div>
     <div class="footer">Copyright © The Odin Project</div>
   </body>
