--- a/index.html
+++ b/index.html
@@ -61,7 +61,17 @@
         </p>
         <p class="credit">Thor, God of Thunder</p>
       </div>
-      <div class="action"></div>
+      <div class="action">
+        <div class="action-content">
+          <div class="action-text">
+            <h3>Call to action! It's time!</h3>
+            <p>
+              Sign up for our product by clicking that button right over there!
+            </p>
+          </div>
+          <button>Sign Up</button>
+        </div>
+      </div>
     </div>
     <div class="footer">Copyright © The Odin Project</div>
   </body>
